Get web side working with maven

--- a/com.grack.adventure.web/war/index.html
+++ b/com.grack.adventure.web/war/index.html
@@ -17,7 +17,7 @@
 	<textarea id="input-catcher"></textarea>
 	<div class="monitor">
 		<div class="monitor-outer-frame">
-			<img class="monitor-label" src="img/tape2.png">
+			<a href="http://github.com/mmastrac/adventure" class="monitor-label"></a>
 			<div class="monitor-texture"></div>
 			<div class="monitor-inner-bezel">
 				<img class="monitor-screen" src="img/monitor.png">
