--- a/com.grack.adventure.web/war/index.html
+++ b/com.grack.adventure.web/war/index.html
@@ -4,13 +4,13 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="viewport" content="width = 1140, user-scalable = no" />
-<link type="text/css" rel="stylesheet" href="css/style.css">
+<link type="text/css" rel="stylesheet" href="css/style.css?1">
 <title>Colossal Cave Adventure</title>
-<script src="adventure/adventure.nocache.js"></script>
+<script src="adventure/adventure.nocache.js?1"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script>if (!window.jQuery) document.write('<script src="jquery.min.js"></scr' + 'ipt/>')</script>
 <script src="js/jquery-caret.js"></script>
-<script src="js/script.js"></script>
+<script src="js/script.js?2"></script>
 <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
 </head>
 <body>
